# robot-base-simulation

./: movement.usd  zekov2.usdc
zeko_description/: CMakeLists.txt  README.md  package.xml
zeko_description/config/: ros2_control.yaml
zeko_description/launch/: display.launch.py
zeko_description/meshes/: base_link.stl  front_caster_fork.stl  front_caster_wheel.stl  left_wheel_link.stl  pelvis_mount_link.stl  rear_caster_fork.stl  rear_caster_wheel.stl  right_wheel_link.stl  support_frame_link.stl
zeko_description/urdf/: base.xacro  casters.xacro  materials.xacro  pelvis_mount.xacro  support_frame.xacro  wheels.xacro  zeko.urdf  zeko.xacro
zeko_description/urdf/zeko/: zeko.usda
zeko_description/urdf/zeko/payloads/: base.usda  geometries.usd  instances.usda  materials.usda  robot.usda
zeko_description/urdf/zeko/payloads/Physics/: mujoco.usda  physics.usda  physx.usda
